<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offerte"
            android:icon="@drawable/wellness"
            android:title="@string/offerte" />
        <item
            android:id="@+id/nav_orari"
            android:icon="@drawable/orari"
            android:title="@string/orari" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
    </group>

    <item android:title="Utente">
        <menu>
            <item
                android:id="@+id/nav_registrazione"
                android:icon="@drawable/user"
                android:title="@string/registrazione" />
            <item
                android:id="@+id/nav_accesso"
                android:icon="@drawable/enter"
                android:title="@string/accesso" />
        </menu>
    </item>

</menu>
