<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vanni.spaApp.fragments.InfoFragment">

    <TextView
        android:id="@+id/textViewGiornoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:text="@string/giorni"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textViewOraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewGiornoText"
        android:layout_below="@+id/textViewGiorno"
        android:layout_marginTop="26dp"
        android:text="@string/orario"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/textViewGiorno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewGiornoText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="54dp"
        android:text="@string/giorniValore" />

    <TextView
        android:id="@+id/textViewOra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewOraText"
        android:layout_alignStart="@+id/textViewGiorno"
        android:text="@string/orarioValore" />

</RelativeLayout>
